blog/infra/k8s/client-ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /(.*)?
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 3000
